--- a/src/app/components/img/img.component.html
+++ b/src/app/components/img/img.component.html
@@ -1,4 +1,5 @@
-<img width="200" (load)="imgLoaded()" (error)="imgError()" [src]="img" *ngIf="img; else elseImg">
+<!-- <img width="200" (load)="imgLoaded()" (error)="imgError()" [src]="img" *ngIf="img; else elseImg">
 <ng-template #elseImg>
   <img [src]="imageDefault" alt="">
-</ng-template>
+</ng-template> -->
+<p>image works</p>
