--- a/src/app/components/img/img.component.html
+++ b/src/app/components/img/img.component.html
@@ -1,5 +1,7 @@
 <img width="200" (load)="imgLoaded()" (error)="imgError()" [src]="img" *ngIf="img; else elseImg">
+<h3>{{counter}}</h3>
 <ng-template #elseImg>
   <img width="200" [src]=imageDefault alt="">
+
 </ng-template>
 <p>image works</p>
