--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+.products--grid {
+  app-img {
+    img {
+      border-radius: 10px;
+  
+        width: 200px;
+ 
+    }
+  }
+}
