--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -11,6 +11,22 @@
         background: transparent;
       }
     }
+    .side-menu{
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        justify-content:  flex-start;
+        transition: all ease-out .5s;
+        transform: translateX(-100%);
+      &.active{
+        transform: translateX(0);
+      }
+    }
   }
   .hide-mobile {
     display: none;
