--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,6 +1,7 @@
 <p>Tienes {{myShoppingCart.length}} productos añadidos</p>
 <p>El total de tu compra es ${{total}}</p>
 <p>Today: {{today | date: 'short'}}</p>
+<p>Today: {{today | timeAgo}}</p>
 <p>Otra fecha {{date | date: 'yyyy.dd.mm'}}</p>
 <p>
     {{'HoLAAaA' | uppercase}}
